fix(task): overflowing icons for swipe blocks

--- a/src/app/features/tasks/task/task.component.scss
+++ b/src/app/features/tasks/task/task.component.scss
@@ -543,6 +543,7 @@
   z-index: $z-swipe-block;
   transition: $transition-standard;
   border-radius: $task-border-radius;
+  overflow: hidden;
 
   &.isActive {
     background-color: $c-accent;
